[PHOENIX-8143]Separating Water Charges collection and Estimation Charges collection